@startuml
skinparam classAttributeIconSize 0
skinparam defaultTextAlignment center
skinparam linetype ortho
top to bottom direction

class ProfileVM {
  +string FullName
  +string Email
  +string Role
}

class AccountController {
  -IUserService _userService
  +Task<ActionResult<ProfileVM>> GetProfile(Guid id)
}

interface IUserService {
  +Task<Result<ProfileVM>> GetUserProfileAsync(Guid userId)
  +Task<Result<bool>> CheckUserInGroup(Guid userId, string groupName)
}

class UserService {
  -IUserRepository _userRepository
  +Task<Result<ProfileVM>> GetUserProfileAsync(Guid userId)
  +Task<Result<bool>> CheckUserInGroup(Guid userId, string groupName)
}

interface IUserRepository {
  +Task<Result<User>> GetUserProfileAsync(Guid userId)
  +Task<Result<bool>> CheckUserInGroup(Guid userId, string groupName)
}

class UserRepository {
  +Task<Result<User>> GetUserProfileAsync(Guid userId)
  +Task<Result<bool>> CheckUserInGroup(Guid userId, string groupName)
}

AccountController --> IUserService : Service layer for logic

IUserService <|.. UserService :Provides business logic
UserService --> IUserRepository : Repository for data access

IUserRepository <|.. UserRepository :Handles DB operations

AccountController --> ProfileVM : Return Profile

@enduml
